@@ -13,30 +13,40 @@
  */
 package org.gbif.registry.search.dataset.common;
 
+
+import lombok.SneakyThrows;
+import org.gbif.registry.search.dataset.indexing.ws.JacksonObjectMapper;
+import com.fasterxml.jackson.core.type.TypeReference;
+import com.fasterxml.jackson.databind.ObjectMapper;
+import com.fasterxml.jackson.core.JsonProcessingException;
+
 import org.gbif.api.model.common.search.Facet;
 import org.gbif.api.model.common.search.FacetedSearchRequest;
 import org.gbif.api.model.common.search.SearchParameter;
 import org.gbif.api.model.common.search.SearchRequest;
-import org.gbif.api.model.common.search.SearchResponse;
 
+import java.util.Collections;
 import java.util.Date;
 import java.util.List;
 import java.util.Map;
+import java.util.Map.Entry;
 import java.util.Objects;
 import java.util.Optional;
 import java.util.function.Function;
 import java.util.function.Predicate;
 import java.util.regex.Pattern;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
-
-import org.elasticsearch.search.SearchHit;
-import org.elasticsearch.search.aggregations.Aggregation;
-import org.elasticsearch.search.aggregations.bucket.filter.Filter;
-import org.elasticsearch.search.aggregations.bucket.terms.Terms;
-import org.elasticsearch.search.suggest.completion.CompletionSuggestion;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
+
+import co.elastic.clients.elasticsearch.core.search.CompletionSuggestOption;
+import co.elastic.clients.elasticsearch.core.search.Suggestion;
+import co.elastic.clients.elasticsearch.core.search.Hit;
+import co.elastic.clients.elasticsearch._types.aggregations.Aggregate;
+import co.elastic.clients.elasticsearch._types.aggregations.Aggregation;
+import co.elastic.clients.elasticsearch._types.aggregations.StringTermsAggregate;
+import co.elastic.clients.elasticsearch._types.aggregations.StringTermsBucket;
+import co.elastic.clients.elasticsearch._types.aggregations.FilterAggregate;
 
 import static org.gbif.registry.search.dataset.indexing.es.EsQueryUtils.STRING_TO_DATE;
 import static org.gbif.registry.search.dataset.indexing.es.EsQueryUtils.extractFacetLimit;
@@ -65,9 +75,16 @@ public class EsResponseParser<T, S, P extends SearchParameter> {
    *
    * @return a new instance of a SearchResponse.
    */
-  public SearchResponse<T, P> buildSearchResponse(
-      org.elasticsearch.action.search.SearchResponse esResponse, SearchRequest<P> request) {
-    return buildSearchResponse(esResponse, request, searchResultConverter::toSearchResult);
+  @SneakyThrows
+  public org.gbif.api.model.common.search.SearchResponse<T, P> buildSearchResponse(
+      co.elastic.clients.elasticsearch.core.SearchResponse esResponse, SearchRequest<P> request) {
+    return buildSearchResponse(esResponse, request, hit -> {
+      try {
+        return searchResultConverter.toSearchResult(hit);
+      } catch (JsonProcessingException e) {
+        throw new RuntimeException(e);
+      }
+    });
   }
 
   /**
@@ -75,9 +92,16 @@ public class EsResponseParser<T, S, P extends SearchParameter> {
    *
    * @return a new instance of a SearchResponse.
    */
-  public SearchResponse<S, P> buildSearchAutocompleteResponse(
-      org.elasticsearch.action.search.SearchResponse esResponse, SearchRequest<P> request) {
-    return buildSearchResponse(esResponse, request, searchResultConverter::toSearchSuggestResult);
+  @SneakyThrows
+  public org.gbif.api.model.common.search.SearchResponse<S, P> buildSearchAutocompleteResponse(
+      co.elastic.clients.elasticsearch.core.SearchResponse<String> esResponse, SearchRequest<P> request) {
+    return buildSearchResponse(esResponse, request, hit -> {
+      try {
+        return searchResultConverter.toSearchSuggestResult(hit);
+      } catch (JsonProcessingException e) {
+        throw new RuntimeException(e);
+      }
+    });
   }
 
   /**
@@ -85,13 +109,13 @@ public class EsResponseParser<T, S, P extends SearchParameter> {
    *
    * @return a new instance of a SearchResponse.
    */
-  public <R> SearchResponse<R, P> buildSearchResponse(
-      org.elasticsearch.action.search.SearchResponse esResponse,
+  public <R> org.gbif.api.model.common.search.SearchResponse<R, P> buildSearchResponse(
+      co.elastic.clients.elasticsearch.core.SearchResponse<String> esResponse,
       SearchRequest<P> request,
-      Function<SearchHit, R> mapper) {
+      Function<Hit<String>, R> mapper) {
 
-    SearchResponse<R, P> response = new SearchResponse<>(request);
-    response.setCount(esResponse.getHits().getTotalHits().value);
+    org.gbif.api.model.common.search.SearchResponse<R, P> response = new org.gbif.api.model.common.search.SearchResponse<>(request);
+    response.setCount(esResponse.hits().total().value());
     parseHits(esResponse, mapper).ifPresent(response::setResults);
     if (request instanceof FacetedSearchRequest) {
       parseFacets(esResponse, (FacetedSearchRequest<P>) request).ifPresent(response::setFacets);
@@ -101,45 +125,65 @@ public class EsResponseParser<T, S, P extends SearchParameter> {
   }
 
   public List<S> buildSuggestResponse(
-      org.elasticsearch.action.search.SearchResponse esResponse, P parameter) {
+      co.elastic.clients.elasticsearch.core.SearchResponse<String> esResponse, P parameter) {
 
     String fieldName = fieldParameterMapper.get(parameter);
 
-    return esResponse.getSuggest().getSuggestion(fieldName).getEntries().stream()
-        .flatMap(e -> ((CompletionSuggestion.Entry) e).getOptions().stream())
-        .map(CompletionSuggestion.Entry.Option::getHit)
-        .filter(Objects::nonNull)
-        .map(searchResultConverter::toSearchSuggestResult)
-        .collect(Collectors.toList());
+    List<Suggestion<String>> suggesters = esResponse.suggest().get(fieldName);
+
+    if (suggesters == null || suggesters.isEmpty()) {
+      return Collections.emptyList();
+    }
+
+    return suggesters.stream()
+      .filter(Suggestion::isCompletion)
+      .flatMap(s -> s.completion().options().stream())
+      .map(CompletionSuggestOption::source)
+      .filter(Objects::nonNull)
+      .map(source -> {
+        Hit<String> hit = Hit.of(h -> h.source(source));
+        try {
+          return searchResultConverter.toSearchSuggestResult(hit);
+        } catch (JsonProcessingException e) {
+          throw new RuntimeException(e);
+        }
+      })
+      .collect(Collectors.toList());
   }
 
   /** Extract the buckets of an {@link Aggregation}. */
-  private List<? extends Terms.Bucket> getBuckets(Aggregation aggregation) {
-    if (aggregation instanceof Terms) {
-      return ((Terms) aggregation).getBuckets();
-    } else if (aggregation instanceof Filter) {
-      return ((Filter) aggregation)
-          .getAggregations().asList().stream()
-              .flatMap(agg -> ((Terms) agg).getBuckets().stream())
-              .collect(Collectors.toList());
+  private List<StringTermsBucket> getBuckets(co.elastic.clients.elasticsearch._types.aggregations.Aggregate aggregate) {
+    if (aggregate.isSterms()) {
+      StringTermsAggregate terms = aggregate.sterms();
+      return terms.buckets().array();
+    } else if (aggregate.isFilter()) {
+      FilterAggregate filter = aggregate.filter();
+      return filter.aggregations().entrySet().stream()
+              .map(Entry::getValue)
+              .filter(co.elastic.clients.elasticsearch._types.aggregations.Aggregate::isSterms)
+              .flatMap(agg -> agg.sterms().buckets().array().stream())
+              .toList();
     } else {
-      throw new IllegalArgumentException(aggregation.getClass() + " aggregation not supported");
+      throw new IllegalArgumentException(aggregate.getClass() + " aggregation not supported");
     }
   }
 
   private Optional<List<Facet<P>>> parseFacets(
-      org.elasticsearch.action.search.SearchResponse esResponse, FacetedSearchRequest<P> request) {
-    return Optional.ofNullable(esResponse.getAggregations())
+      co.elastic.clients.elasticsearch.core.SearchResponse<String> esResponse, FacetedSearchRequest<P> request) {
+    return Optional.ofNullable(esResponse.aggregations())
         .map(
             aggregations ->
-                aggregations.asList().stream()
+                aggregations.entrySet().stream()
                     .map(
-                        aggs -> {
+                        entry -> {
+                          String aggName = entry.getKey();
+                          Aggregate agg = entry.getValue();
+
                           // get buckets
-                          List<? extends Terms.Bucket> buckets = getBuckets(aggs);
+                          List<StringTermsBucket> buckets = getBuckets(agg);
 
                           // get facet of the agg
-                          P facet = fieldParameterMapper.get(aggs.getName());
+                          P facet = fieldParameterMapper.get(aggName);
 
                           // check for paging in facets
                           long facetOffset = extractFacetOffset(request, facet);
@@ -149,7 +193,7 @@ public class EsResponseParser<T, S, P extends SearchParameter> {
                               buckets.stream()
                                   .skip(facetOffset)
                                   .limit(facetOffset + facetLimit)
-                                  .map(b -> new Facet.Count(b.getKeyAsString(), b.getDocCount()))
+                                  .map(b -> new Facet.Count(b.key().stringValue(), b.docCount()))
                                   .collect(Collectors.toList());
 
                           return new Facet<>(facet, counts);
@@ -158,50 +202,50 @@ public class EsResponseParser<T, S, P extends SearchParameter> {
   }
 
   private <R> Optional<List<R>> parseHits(
-      org.elasticsearch.action.search.SearchResponse esResponse, Function<SearchHit, R> mapper) {
-    if (esResponse.getHits() == null
-        || esResponse.getHits().getHits() == null
-        || esResponse.getHits().getHits().length == 0) {
+      co.elastic.clients.elasticsearch.core.SearchResponse<String> esResponse, Function<Hit<String>, R> mapper) {
+    if (esResponse.hits() == null
+        || esResponse.hits().hits() == null
+        || esResponse.hits().hits().isEmpty()) {
       return Optional.empty();
     }
 
     return Optional.of(
-        Stream.of(esResponse.getHits().getHits()).map(mapper).collect(Collectors.toList()));
+        esResponse.hits().hits().stream().map(mapper).collect(Collectors.toList()));
   }
 
-  private static Optional<String> getStringValue(SearchHit hit, String esField) {
+  private static Optional<String> getStringValue(Hit<String> hit, String esField) {
     return getValue(hit, esField, Function.identity());
   }
 
-  private static Optional<Integer> getIntValue(SearchHit hit, String esField) {
+  private static Optional<Integer> getIntValue(Hit<String> hit, String esField) {
     return getValue(hit, esField, Integer::valueOf);
   }
 
-  private static Optional<Double> getDoubleValue(SearchHit hit, String esField) {
+  private static Optional<Double> getDoubleValue(Hit<String> hit, String esField) {
     return getValue(hit, esField, Double::valueOf);
   }
 
-  private static Optional<Date> getDateValue(SearchHit hit, String esField) {
+  private static Optional<Date> getDateValue(Hit<String> hit, String esField) {
     return getValue(hit, esField, STRING_TO_DATE);
   }
 
-  private static Optional<List<String>> getListValue(SearchHit hit, String esField) {
-    return Optional.ofNullable(hit.getSourceAsMap().get(esField))
+  private static Optional<List<String>> getListValue(Hit<String> hit, String esField) {
+    return Optional.ofNullable(getSourceAsMap(hit).get(esField))
         .map(v -> (List<String>) v)
         .filter(v -> !v.isEmpty());
   }
 
   private static Optional<List<Map<String, Object>>> getObjectsListValue(
-      SearchHit hit, String esField) {
-    return Optional.ofNullable(hit.getSourceAsMap().get(esField))
+      Hit<String> hit, String esField) {
+    return Optional.ofNullable(getSourceAsMap(hit).get(esField))
         .map(v -> (List<Map<String, Object>>) v)
         .filter(v -> !v.isEmpty());
   }
 
   private static <T> Optional<T> getValue(
-      SearchHit hit, String esField, Function<String, T> mapper) {
+      Hit<String> hit, String esField, Function<String, T> mapper) {
     String fieldName = esField;
-    Map<String, Object> fields = hit.getSourceAsMap();
+    Map<String, Object> fields = getSourceAsMap(hit);
     if (IS_NESTED.test(esField)) {
       // take all paths till the field name
       String[] paths = esField.split("\\.");
@@ -214,6 +258,22 @@ public class EsResponseParser<T, S, P extends SearchParameter> {
     }
 
     return extractValue(fields, fieldName, mapper);
+  }
+
+  private static Map<String, Object> getSourceAsMap(Hit<String> hit) {
+    try {
+      String source = hit.source();
+      if (source == null || source.isEmpty()) {
+        return new java.util.HashMap<>();
+      }
+
+      ObjectMapper mapper = JacksonObjectMapper.get();
+      TypeReference<Map<String, Object>> typeRef = new TypeReference<Map<String, Object>>() {};
+      return mapper.readValue(source, typeRef);
+    } catch (Exception e) {
+      LOG.error("Error parsing hit source as JSON: {}", e.getMessage(), e);
+      return new java.util.HashMap<>();
+    }
   }
 
   private static <T> Optional<T> extractValue(
